DATACMNS-867 - Adapt codebase after rebase on forward ports.